# image-processor

./: CMakeLists.txt  image_processor  readme.md
src/args/: args.cpp  args.h
src/filters/: Edge_Detection.cpp  crop.cpp  filter.h  grayscale.cpp  matrix_filtr.cpp  matrix_filtr.h  negative.cpp  registry.h  sharpening.cpp
src/image/: image.h
src/image_format/: bmp.cpp  bmp.h  format.h
src/io/: reader.cpp  reader.h  writer.cpp  writer.h
src/utils/: matrix.h
